--- a/package.json
+++ b/package.json
@@ -6,9 +6,14 @@
     "@testing-library/jest-dom": "^5.11.6",
     "@testing-library/react": "^11.2.2",
     "@testing-library/user-event": "^12.2.2",
+    "json-loader": "^0.5.7",
     "react": "^17.0.1",
+    "react-date-countdown-timer": "^1.0.9",
     "react-dom": "^17.0.1",
+    "react-router-dom": "^5.2.0",
+    "react-router-transition": "^2.0.0",
     "react-scripts": "4.0.1",
+    "react-typist": "^2.0.5",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
