--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "react": "^17.0.1",
     "react-date-countdown-timer": "^1.0.9",
     "react-dom": "^17.0.1",
+    "react-expand-animated": "^1.0.2",
     "react-router-dom": "^5.2.0",
     "react-router-transition": "^2.0.0",
     "react-scripts": "4.0.1",
